--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Excel-ValueReader-XLSX
 
+1.01 01.08.2021
+  - bug fix : properly handle strings with embedded newlines characters (David Flink++)
+
 1.0 31.05.2020
   - initial release
   
