--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Excel-ValueReader-XLSX
 
+1.05 17.12.2021
+  - suppress warnings when a style is applied to a non-numeric cell
+
 1.04 25.08.2021
   - hack to avoid floating-point imprecisions in computing time values
 
