--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Excel-ValueReader-XLSX
 
+1.08 04.02.2022
+  - added the table() method
+
 1.07 31.12.2021
   - oops, forgot a file in MANIFEST
 
