--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Excel-ValueReader-XLSX
 
+1.11 05.11.2023
+  - new() can take a filehandle instead of a filename
+
 1.10 12.02.2023
   - support cells without an 'r' attribute (David Flink++)
 
