--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Excel-ValueReader-XLSX
 
+1.14 16.05.2023
+  - better error message for invalid table name
+
 1.13 06.11.2023
   - minor fixes: typos, source improvements, avoid dependencies on unsafe modules (Merijn Brand++)
 
