--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Excel-ValueReader-XLSX
 
+1.15 11.01.2025
+  - fix bug in table() with 'ref' param (Ephraim Stevens++)
+
 1.14 16.05.2023
   - better error message for invalid table name
 
